# libmaolanoss

./: CMakeLists.txt  README.md  libmaolanoss.pc.in
maolan/audio/: base.hpp  in.hpp  oss.hpp  out.hpp
maolan/audio/oss/: base.hpp  in.hpp  out.hpp
maolan/midi/: base.hpp  in.hpp  oss.hpp  out.hpp
maolan/midi/oss/: base.hpp  in.hpp  out.hpp
src/audio/: base.cpp  export.cpp  in.cpp  out.cpp
src/midi/: base.cpp  export.cpp  in.cpp  out.cpp
tests/: load.cpp  playback.cpp
